Improved styles for big screens

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<div class="app h-100">
+<div class="app h-100 p-3">
 
   <div class="app-map m-1">
     <div class="app-map-container">
